--- a/Bank System/Bank System.cbp
+++ b/Bank System/Bank System.cbp
@@ -13,6 +13,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
+					<Add directory="include" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
@@ -22,6 +23,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
+					<Add directory="include" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -32,7 +34,15 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="include/Admin.h" />
+		<Unit filename="include/Client.h" />
+		<Unit filename="include/Employee.h" />
+		<Unit filename="include/Person.h" />
 		<Unit filename="main.cpp" />
+		<Unit filename="src/Admin.cpp" />
+		<Unit filename="src/Client.cpp" />
+		<Unit filename="src/Employee.cpp" />
+		<Unit filename="src/Person.cpp" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
 		</Extensions>
