--- a/Bank System/Bank System.cbp
+++ b/Bank System/Bank System.cbp
@@ -38,11 +38,13 @@
 		<Unit filename="include/Client.h" />
 		<Unit filename="include/Employee.h" />
 		<Unit filename="include/Person.h" />
+		<Unit filename="include/Validation.h" />
 		<Unit filename="main.cpp" />
 		<Unit filename="src/Admin.cpp" />
 		<Unit filename="src/Client.cpp" />
 		<Unit filename="src/Employee.cpp" />
 		<Unit filename="src/Person.cpp" />
+		<Unit filename="src/Validation.cpp" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
 		</Extensions>
