--- a/Bank System/Bank System.cbp
+++ b/Bank System/Bank System.cbp
@@ -36,13 +36,17 @@
 		</Compiler>
 		<Unit filename="include/Admin.h" />
 		<Unit filename="include/Client.h" />
+		<Unit filename="include/DataSourceInterface.h" />
 		<Unit filename="include/Employee.h" />
+		<Unit filename="include/FileManager.h" />
 		<Unit filename="include/Person.h" />
 		<Unit filename="include/Validation.h" />
 		<Unit filename="main.cpp" />
 		<Unit filename="src/Admin.cpp" />
 		<Unit filename="src/Client.cpp" />
+		<Unit filename="src/DataSourceInterface.cpp" />
 		<Unit filename="src/Employee.cpp" />
+		<Unit filename="src/FileManager.cpp" />
 		<Unit filename="src/Person.cpp" />
 		<Unit filename="src/Validation.cpp" />
 		<Extensions>
